# projects

./: README.md  blackjackAI.py  kmeans.py  knn.py  logisiticRegression.py  neuralnetworkhyperparameter.py
ChessML-main/: IKFK.py  chessPieceDetector.py  chessPieceDetectorENGINETEST.py  qnode.cpp  qnode.hpp
ChessML-main/chessML/: CMakeLists.txt  package.xml
ChessML-main/chessPieceDetectorYOLOmodelexDATA/: game_099_G099_IMG099.txt
ChessML-main/csv_annotations/: corners.csv  images.csv  splits.csv
FitTrack-main/: App.tsx  README.md  app.json  firebase.ts  package-lock.json  package.json
FitTrack-main/ai/: README.md  collect_papers.py  process_papers.py  requirements.txt  train_model.py
FitTrack-main/android/: settings.gradle
FitTrack-main/components/: DateSelector.tsx  FoodItem.tsx  LoginScreen.js  LogoImage.tsx  MealCard.tsx  OnboardingScreen.tsx
PYTHONAI/: AmazonCommentorBias.py  BodyWeightlinearRegression.py  blackjackAI.py  decisionTree.py  linearRegression.py
SmartGit-main/: Cargo.toml  README.md  poop.py
SmartGit-main/src/: auth.rs  cli.rs  config.rs  main.rs  sync.rs
Vision-Based-Robotic-Control-main/: README.md
battleship-LucasFranco12-main/: Makefile  README.md  network_packet.h  server.cpp  test_client.cpp
chessFun/: cameraVisionNueralNetworkTest.py  cameraVisionTest.py  cameraVisionV2.py  cameraVisionV3.py  cameraVisionV4CurrentBest.py  cameraVisionV5.py  cameraVisionV6.py  chessArena.py
playbutton/: dsds.py  videowriter.py
website/: index.html  style.css
youtubeTranscriptAI/: ai.py  combinedAPP.py  index.html  tanscriptGrabber.py
(+44 files in other folders)
