[package]
name = "smartgit"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
sha1 = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
notify = "6.1"
tokio = { version = "1.37", features = ["full"] }
reqwest = { version = "0.11", features = ["blocking", "json", "rustls-tls"] }
regex = "1.11.1"
anyhow = "1.0"
dirs = "5"
base64 = "0.22.1"
similar = "2.2.1"
hostname = "0.3"
whoami = "1.4"
owo-colors = "4.0"
indicatif = "0.17"
zip = "0.6"
walkdir = "2.4"
sysinfo = "0.29"
